[fix] icon vertical align on WorksDetail/SiteInfo [add] image for body background

--- a/src/components/SvgIcon/index.scss
+++ b/src/components/SvgIcon/index.scss
@@ -4,4 +4,5 @@
   min-width: 14px;
   height:.8em;
   overflow: hidden;
+  vertical-align: middle;
 }
