--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: '#F5F3ED';
+  background: url('../public/assets/background.jpg')!important;
 }
 
 .slider,
